--- a/.github/workflows/depl.yml
+++ b/.github/workflows/depl.yml
@@ -19,8 +19,7 @@ jobs:
           npm install
           npm run build
       - name: Deploy
-        uses JamesIves/github-pages-deploy-action@4.1.1
+        uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-pages
           folder: build
-
